--- a/wp-special-textboxes-pl_PL.po
+++ b/wp-special-textboxes-pl_PL.po
@@ -1,123 +1,124 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR minimus
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: wp-special-textboxes in italiano\n"
+"Project-Id-Version: WP Special Textboxes\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-special-textboxes\n"
 "POT-Creation-Date: 2009-08-25 09:59+0000\n"
-"PO-Revision-Date: \n"
-"Last-Translator: Gianni Diurno (aka gidibao) <gidibao@gmail.com>\n"
-"Language-Team: Gianni Diurno | http://gidibao.net/ <gidibao@gmail.com>\n"
+"PO-Revision-Date: 2009-08-25 13:35+0100\n"
+"Last-Translator: Daniel Frużyński <daniel [A-T] poradnik-webmastera.com>\n"
+"Language-Team: Daniel Fruzynski <daniel [A-T] poradnik-webmastera.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Italian\n"
-"X-Poedit-Country: ITALY\n"
+"X-Poedit-Language: Polish\n"
+"X-Poedit-Country: POLAND\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-KeywordsList: _e;__;__ngettext:1,2;__ngettext_noop:1,2;_c\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Poedit-Basepath: .\n"
-"X-Poedit-SearchPath-0: .\n"
 
 #: js/dialog.php:20
 msgid "Insert Special Text Box"
-msgstr "Inserisci casella speciale di testo"
+msgstr "Wstawia specjalne pola tekstowe"
 
 #: js/dialog.php:34
 #: wp-special-textboxes.php:241
 msgid "Basic Settings"
-msgstr "Impostazioni di base"
+msgstr "Ustawienia podstawowe"
 
 #: js/dialog.php:35
 #: wp-special-textboxes.php:293
 msgid "Extended Settings"
-msgstr "Impostazioni avanzate"
+msgstr "Ustawienia rozszerzone"
 
 #: js/dialog.php:42
 msgid "Text Box ID"
-msgstr "ID casella di testo"
+msgstr "ID pola tekst."
 
 #: js/dialog.php:45
 msgid "Alert"
-msgstr "Avvertimento"
+msgstr "Ostrzeżenie"
 
 #: js/dialog.php:46
 msgid "Download"
-msgstr "Download"
+msgstr "Plik do pobrania"
 
 #: js/dialog.php:47
 msgid "Info"
-msgstr "Info"
+msgstr "Informacja"
 
 #: js/dialog.php:48
 msgid "Black"
-msgstr "Nero"
+msgstr "Czarne"
 
 #: js/dialog.php:49
 msgid "Grey"
-msgstr "Grigio"
+msgstr "Szare"
 
 #: js/dialog.php:50
 msgid "Custom"
-msgstr "Personalizzata"
+msgstr "Własne"
 
 #: js/dialog.php:55
 msgid "Caption"
-msgstr "Didascalia"
+msgstr "Nagłówek"
 
 #: js/dialog.php:63
 msgid "Text color"
-msgstr "Colore del testo"
+msgstr "Kolor tekstu"
 
 #: js/dialog.php:72
 msgid "Caption Text color"
-msgstr "Colore testo didascalia"
+msgstr "Kolor tekstu nagłówka"
 
 #: js/dialog.php:83
 msgid "Color"
-msgstr "Colore"
+msgstr "Kolor"
 
 #: js/dialog.php:92
 msgid "Caption color"
-msgstr "Colore didascalia"
+msgstr "Kolor nagłówka"
 
 #: js/dialog.php:103
 msgid "Border color"
-msgstr "Colore bordo"
+msgstr "Kolor ramki"
 
 #: js/dialog.php:116
 msgid "Image URL"
-msgstr "URL immagine"
+msgstr "Adres URL obrazka"
 
 #: js/dialog.php:123
 msgid "This is big image (or, if URL not entered, big standard image)"
-msgstr "Questa é una immagine grande (oppure, se l'URL non fosse stato inserito, una grande immagine standard)"
+msgstr "To jest duży obrazek (lub,jeżeli adres URL nie jest wprowadzony, duży standardowy obrazek)"
 
 #: js/dialog.php:127
 msgid "Do not show image"
-msgstr "Non mostrare l'immagine"
+msgstr "Nie pokazuj obrazka"
 
 #: js/dialog.php:134
 msgid "Cancel"
-msgstr "Annulla"
+msgstr "Anuluj"
 
 #: js/dialog.php:137
 msgid "Insert"
-msgstr "Inserisci"
+msgstr "Wstaw"
 
 #: wp-special-textboxes.php:219
 msgid "This is example of Custom Special Text Box with small image. You must save options to view changes."
-msgstr "Questo é un esempio di casella speciale di testo personalizzata . Salvando le impostazioni potrai vedere le modifiche."
+msgstr "To jest przykład własnego specjalnego pola tekstowego z małym obrazkiem. Musisz zapisać opcje aby zobaczyć zmiany."
 
 #: wp-special-textboxes.php:220
 msgid "This is example of Custom Special Text Box with big image. You must save options to view changes."
-msgstr "Questo é un esempio di casella speciale di testo personalizzata  con una immagine grande. Salvando le impostazioni potrai vedere le modifiche."
+msgstr "To jest przykład własnego specjalnego pola tekstowego z dużym obrazkiem. Musisz zapisać opcje aby zobaczyć zmiany."
 
 #: wp-special-textboxes.php:221
 msgid "This is caption"
-msgstr "Questa é la didascalia"
+msgstr "To jest nagłówek"
 
 #: wp-special-textboxes.php:222
 msgid "This is example of Captioned Custom Special Text Box. You must save options to view changes."
-msgstr "Questo é un esempio di una casella speciale di testo personalizzata con didascalia. Salvando le impostazioni potrai vedere le modifiche."
+msgstr "To jest przykład specjalnego pola tekstowego z nagłówkiem. Musisz zapisać opcje aby zobaczyć zmiany."
 
 #. #-#-#-#-#  plugin.pot (PACKAGE VERSION)  #-#-#-#-#
 #. Plugin Name of an extension
@@ -127,51 +128,51 @@ msgstr "Special Text Boxes"
 
 #: wp-special-textboxes.php:245
 msgid "Select border style for Special Text Boxes"
-msgstr "Seleziona lo stile per il bordo delle caselle speciali di testo"
+msgstr "Wybierz styl ramki dla specjalnych pól tekstowych"
 
 #: wp-special-textboxes.php:246
 msgid "Selecting \"None\" will disable Special Text Boxes border."
-msgstr "Selezionando \"Nessuno\" verrà disattivato il bordo per le caselle speciali di testo."
+msgstr "Wybierając \"none\" wyłączysz ramkę dla specjalnych pól tekstowych."
 
 #: wp-special-textboxes.php:252
 msgid "Define top margin for Special Text Boxes"
-msgstr "Definisci il margine superiore per le caselle speciali di testo"
+msgstr "Określ górny margines dla specjalnych pól tekstowych"
 
 #: wp-special-textboxes.php:253
 msgid "This is a gap between top edge of Special Text Box and text above."
-msgstr "Questo é lo spazio tra il contorno superiore della casella speciale di testo ed il testo al di sopra."
+msgstr "To jest odstęp pomiędzy górną krawędzią specjalnego pola tekstowego a tekstem powyżej."
 
 #: wp-special-textboxes.php:258
 msgid "Define left margin for Special Text Boxes"
-msgstr "Definisci il margine del lato sinistro per le caselle speciali di testo"
+msgstr "Określ lewy margines dla specjalnych pól tekstowych"
 
 #: wp-special-textboxes.php:259
 msgid "This is a gap between left edge of Special Text Box and left edge of post area."
-msgstr "Questo é lo spazio tra il contorno del lato sinistro della casella speciale di testo ed il contorno del lato sinistro dell'area articolo."
+msgstr "To jest odstęp pomiędzy lewą krawędzią specjalnego pola tekstowego a lewą krawędzią obszaru wpisu."
 
 #: wp-special-textboxes.php:264
 msgid "Define right margin for Special Text Boxes"
-msgstr "Definisci il margine destro per le caselle speciali di testo"
+msgstr "Określ prawy margines dla specjalnych pól tekstowych"
 
 #: wp-special-textboxes.php:265
 msgid "This is a gap between right edge of Special Text Box and right edge of post area."
-msgstr "Questo é lo spazio tra il contorno del lato destro della casella speciale di testo ed il contorno del lato destro dell'area articolo."
+msgstr "To jest odstęp pomiędzy prawą krawędzią specjalnego pola tekstowego a prawą krawędzią obszaru wpisu."
 
 #: wp-special-textboxes.php:270
 msgid "Define bottom margin for Special Text Boxes"
-msgstr "Definisci il margine inferiore per le caselle speciali di testo"
+msgstr "Określ dolny margines dla specjalnych pól tekstowych"
 
 #: wp-special-textboxes.php:271
 msgid "This is a gap between bottom edge of Special Text Box and text below."
-msgstr "Questo é lo spazio tra il contorno inferiore della casella speciale di testo ed il testo al di sotto."
+msgstr "To jest odstęp pomiędzy dolną krawędzią specjalnego pola tekstowego a tekstem poniżej."
 
 #: wp-special-textboxes.php:276
 msgid "Allow Big Image for Simple (non-captioned) Special Text Boxes?"
-msgstr "Desideri una immagine grande (senza didascalia) per il semplice box delle caselle speciali di testo?"
+msgstr "Pozwól na duże obrazki dla prostych (bez nagłówka) specjalnych pól tekstowych?"
 
 #: wp-special-textboxes.php:277
 msgid "Selecting \"Yes\" will allow big icons for simple (non-captioned) Special Text Boxes."
-msgstr "Selezionando \"Sì\" permetterai l'utilizzo di grandi icone (senza didascalia) per il semplice box delle caselle speciali di testo."
+msgstr "Wybierając \"Tak\" pozwolisz na użycie dużych ikon dla prostych (bez nagłówka) specjalnych pól tekstowych."
 
 #: wp-special-textboxes.php:280
 #: wp-special-textboxes.php:287
@@ -179,7 +180,7 @@ msgstr "Selezionando \"Sì\" permetterai l'utilizzo di grandi icone (senza didas
 #: wp-special-textboxes.php:309
 #: wp-special-textboxes.php:316
 msgid "Yes"
-msgstr "Sì"
+msgstr "Tak"
 
 #: wp-special-textboxes.php:280
 #: wp-special-textboxes.php:287
@@ -187,120 +188,120 @@ msgstr "Sì"
 #: wp-special-textboxes.php:309
 #: wp-special-textboxes.php:316
 msgid "No"
-msgstr "No"
+msgstr "Nie"
 
 #: wp-special-textboxes.php:283
 msgid "Allow icon images for Special Text Boxes?"
-msgstr "Desideri permettere le immagini icona per le caselle speciali di testo?"
+msgstr "Włącz obrazki - ikony dla specjalnych pól tekstowych?"
 
 #: wp-special-textboxes.php:284
 msgid "Selecting \"Yes\" will allow displaying icon images in Special Text Boxes."
-msgstr "Selezionando \"Sì'\" permetterai la visualizzazione delle icone immagine nelle caselle speciali di testo."
+msgstr "Wybierając \"Tak\" włączysz wyświetlanie obrazków - ikon w specjalnych pól tekstowych."
 
 #: wp-special-textboxes.php:294
 msgid "Parameters below add elements of CSS3 standard to Style Sheet. Not all browsers can interpret this elements properly, but including this elements to HTML page not crash browser."
-msgstr "I parametri qui sotto aggiungeranno degli elementi CSS3 standard al foglio di stile. Non tutti i browser saranno in grado di potere interpretare correttamente questi elementi; in ogni caso, l'inclusione di questi elementi all'HTML della pagina non bloccherà il browser."
+msgstr "Parametry poniżej dodają elementy standardu CSS3 do arkusza stylów CSS. Nie wszystkie przeglądarki potrafią je zinterpretować poprawnie, ale dołączenie tych elementów w HTML nie spowoduje awarii przeglądarki."
 
 #: wp-special-textboxes.php:298
 msgid "Allow rounded corners for Special Text Boxes?"
-msgstr "Desideri gli angoli arrotondati per le caselle speciali di testo?"
+msgstr "Włącz zaokrąglone narożniki dla specjalnych pól tekstowych?"
 
 #: wp-special-textboxes.php:299
 msgid "Selecting \"No\" will disable Special Text Boxes rounded corners."
-msgstr "Selezionando \"No\" verranno disattivati gli angoli arrotondati per le caselle speciali di testo."
+msgstr "Wybranie \"Nie\" wyłączy zaokrąglone narożniki dla specjalnych pól tekstowych."
 
 #: wp-special-textboxes.php:305
 msgid "Allow box shadow for Special Text Boxes?"
-msgstr "Desideri un effetto ombra per per il box delle caselle speciali di testo?"
+msgstr "Włącz cień pola dla specjalnych pól tekstowych?"
 
 #: wp-special-textboxes.php:306
 msgid "Selecting \"No\" will disable Special Text Boxes shadow."
-msgstr "Selezionando \"No\" verrà disattivato l'effetto ombra per il box delle caselle speciali di testo. "
+msgstr "Wybranie \"Nie\" wyłączy cień pola dla specjalnych pól tekstowych."
 
 #: wp-special-textboxes.php:312
 msgid "Allow text shadow for Special Text Boxes?"
-msgstr "Desideri un effetto ombra per il testo delle caselle speciali di testo?"
+msgstr "Włącz cień tekstu dla specjalnych pól tekstowych?"
 
 #: wp-special-textboxes.php:313
 msgid "Selecting \"No\" will disable Special Text Boxes text shadow."
-msgstr "Selezionando \"No\" verrà disattivato l'effetto ombra per il testo delle caselle speciali di testo. "
+msgstr "Wybranie \"Nie\" wyłączy cień tekstu dla specjalnych pól tekstowych."
 
 #: wp-special-textboxes.php:333
 #: wp-special-textboxes.php:415
 msgid "Custom Box Editor"
-msgstr "Editor casella personalizzata"
+msgstr "Edytor ramek dla pól"
 
 #: wp-special-textboxes.php:334
 msgid "Use parameters below for customising custom Special Text Box."
-msgstr "Utilizza i parametri qui sotto per personalizzare la casella speciale di testo."
+msgstr "Użyj parametrów poniżej aby dostosować wygląd własnych specjalnych pól tekstowych."
 
 #: wp-special-textboxes.php:338
 msgid "Define font color for Custom Special Text Box"
-msgstr "Definisci il colore del carattere per la casella speciale di testo"
+msgstr "Określ kolor czcionki dla tekstu we własnych specjalnych polach tekstowych."
 
 #: wp-special-textboxes.php:339
 msgid "This is a font color of Custom Special Text Box (Six Hex Digits)."
-msgstr "Questo é il colore per la casella speciale di testo personalizzata (sei caratteri esagesimali)."
+msgstr "To jest kolor czcionki dla tekstu we własnych specjalnych polach tekstowych (sześć cyfr szesnastkowych)."
 
 #: wp-special-textboxes.php:344
 msgid "Define caption font color for Custom Special Text Box"
-msgstr "Definisci il colore del carattere per la didascalia della casella speciale di testo personalizzata"
+msgstr "Określ kolor czcionki dla nagłówka we własnych specjalnych polach tekstowych."
 
 #: wp-special-textboxes.php:345
 msgid "This is a font color of Custom Special Text Box caption (Six Hex Digits)."
-msgstr "Questo é il colore del carattere per la didascalia della casella speciale di testo personalizzata (sei caratteri esagesimali)."
+msgstr "To jest kolor czcionki dla nagłówka we własnych specjalnych polach tekstowych (sześć cyfr szesnastkowych)."
 
 #: wp-special-textboxes.php:350
 msgid "Define background color for Custom Special Text Box"
-msgstr "Definisci il colore di sfondo per la casella speciale di testo personalizzata"
+msgstr "Określ kolor tła dla tekstu we własnych specjalnych polach tekstowych."
 
 #: wp-special-textboxes.php:351
 msgid "This is a background color of Custom Special Text Box (Six Hex Digits)."
-msgstr "Questo é il colore di sfondo per la casella speciale di testo personalizzata (sei caratteri esagesimali)."
+msgstr "To jest kolor tła dla tekstu we własnych specjalnych polach tekstowych (sześć cyfr szesnastkowych)."
 
 #: wp-special-textboxes.php:356
 msgid "Define background color for Custom Special Text Box caption"
-msgstr "Definisci il colore dello sfondo della didascalia per la casella speciale di testo personalizzata"
+msgstr "Określ kolor tła dla nagłówka we własnych specjalnych polach tekstowych."
 
 #: wp-special-textboxes.php:357
 msgid "This is a background color of Custom Special Text Box caption (Six Hex Digits)."
-msgstr "Questo é il colore di sfondo della didascalia per la casella speciale di testo personalizzata (sei caratteri esagesimali)."
+msgstr "To jest kolor tła dla nagłówka we własnych specjalnych polach tekstowych (sześć cyfr szesnastkowych)."
 
 #: wp-special-textboxes.php:362
 msgid "Define border color for Custom Special Text Box"
-msgstr "Definisci il colore del bordo per la casella speciale di testo personalizzata"
+msgstr "Określ kolor ramki wokół tekstu we własnych specjalnych polach tekstowych."
 
 #: wp-special-textboxes.php:363
 msgid "This is a border color of Custom Special Text Box (Six Hex Digits)."
-msgstr "Questo é il colore del bordo per la casella speciale di testo personalizzata (sei caratteri esagesimali)."
+msgstr "To jest kolor ramki woków tekstu we własnych specjalnych polach tekstowych (sześć cyfr szesnastkowych)."
 
 #: wp-special-textboxes.php:368
 msgid "Define image for Custom Special Text Box"
-msgstr "Definisci l'immagine per la casella speciale di testo personalizzata"
+msgstr "Określ obrazek dla tekstu we własnych specjalnych polach tekstowych"
 
 #: wp-special-textboxes.php:369
 msgid "This is an image of Custom Special Text Box (Full URL). 25x25 pixels, transparent background PNG image recommended."
-msgstr "Questa é una immagine per la casella speciale di testo personalizzata (URL completo). 25x25 pixel, immagine PNG sfondo trasparente."
+msgstr "To jest obrazek dla tekstu we własnych specjalnych polach tekstowych (pełny adres URL). Zalecenia: 25x25 pikseli, obrazek PNG z przezroczystym tłem."
 
 #: wp-special-textboxes.php:375
 msgid "Define big image for simple (non-captioned) Custom Special Text Box"
-msgstr "Definisci una immagine grande (senza didascalia) per la semplice casella speciale di testo personalizzata"
+msgstr "Określ duży obrazek dla prostych (bez nagłówka) własnych specjalnych pól tekstowych"
 
 #: wp-special-textboxes.php:376
 msgid "This is big image for simple (non-captioned) Custom Special Text Box (Full URL). 50x50 pixels, transparent background PNG image recommended."
-msgstr "Questa é una immagine grande (senza didascalia) per la semplice casella speciale di testo personalizzata (URL completo). 50x50 pixel, immagine PNG sfondo trasparente."
+msgstr "To jest obrazek dla tekstu w prostych (bez nagłówka) własnych specjalnych polach tekstowych (pełny adres URL). Zalecenia: 50x50 pikseli, obrazek PNG z przezroczystym tłem."
 
 #: wp-special-textboxes.php:395
 msgid "Special Text Boxes Settings Updated."
-msgstr "Le impostazioni sono state aggiornate."
+msgstr "Ustawienia specjalnych pól tekstowych zostały zaaktualizowane."
 
 #: wp-special-textboxes.php:402
 msgid "Special Text Boxes Settings"
-msgstr "Impostazioni Special Text Boxes"
+msgstr "Special Text Boxes - Ustawienia"
 
 #: wp-special-textboxes.php:490
 msgid "Update Settings"
-msgstr "Aggiorna le impostazioni"
+msgstr "Zapisz ustawienia"
 
 #. Plugin URI of an extension
 msgid "http://simplelib.co.cc/?p=11"
@@ -308,7 +309,7 @@ msgstr "http://simplelib.co.cc/?p=11"
 
 #. Description of an extension
 msgid "Adds simple colored text boxes to highlight some portion of post text. Use it for highlights warnings, alerts, infos and downloads in your blog posts. Visit <a href=\"http://simplelib.co.cc/\">SimpleLib blog</a> for more details."
-msgstr "Aggiunge delle caselle di testo colorate per evidenziare alcune porzioni di un articolo. Può essere utilizzato per mettere in evidenza nel tuo blog delle informazioni di vario genere. Visita per maggiori dettagli il blog <a href=\"http://simplelib.co.cc/\">SimpleLib</a>."
+msgstr "Dodaje proste kolorowe pola tekstowe aby wyróżnić pewne fragmenty tekstu wpisu. Użyj go aby wyróżnić ostrzeżenia, informacje i pliki do pobrania w Twoich wpisach na blogu. Odwiedź <a href=\"http://simplelib.co.cc/\">blog SimpleLib</a> aby poznać więcej szczegółów."
 
 #. Author of an extension
 msgid "minimus"
@@ -317,29 +318,4 @@ msgstr "minimus"
 #. Author URI of an extension
 msgid "http://blogovod.co.cc"
 msgstr "http://blogovod.co.cc"
-
-#~ msgid "This is big image"
-#~ msgstr "Questa è una immagine grande"
-#~ msgid "Basic"
-#~ msgstr "Base"
-
-#, fuzzy
-#~ msgid "Basic parameters"
-#~ msgstr "Impostazioni di base"
-
-#, fuzzy
-#~ msgid "Extended parameters"
-#~ msgstr "Impostazioni avanzate"
-
-#, fuzzy
-#~ msgid "Extended"
-#~ msgstr "Impostazioni avanzate"
-#~ msgid "Solid"
-#~ msgstr "Сплошная линия"
-#~ msgid "Dashed"
-#~ msgstr "Пунктир"
-#~ msgid "Dotted"
-#~ msgstr "Точки"
-#~ msgid "None"
-#~ msgstr "Без рамки"
 
